--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -879,3 +879,8 @@ footer a:hover {
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) { }
 
+
+.a_title{
+  color: #ffffff;
+}
+
